@@ -13,6 +13,5 @@
         "Satrix World Equity",
         "Lyxor Europe 600",
         "Lyxor World",
-        "iShares Emerging Markets",
-        "ght"
+        "iShares Emerging Markets"
 ]
