@@ -45,3 +45,4 @@
 202304161517: Initial version
 202304192339: Rebooting configuration
 202304200010: Added variables for API keys
+202304202307: Renamed SHA check variables
